Add repository-scoped workflow execution